// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 1`] = `
<View>
  <View
    className="flex flex-row items-center ml-3 mr-3 mt-4"
  >
    <View
      className="flex flex-col"
    >
      <View
        className="mr-2"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#CACACA",
                "fontSize": 56,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰿗
        </Text>
      </View>
    </View>
    <View
      className="flex flex-col flex-1"
    >
      <Text
        className="mr-2 mb-2"
        style={
          {
            "color": "#CACACA",
          }
        }
        testID="sender-username-with-content"
      >
        username
         
        is edging
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#CACACA",
            "opacity": 1,
          }
        }
      >
        <Text
          className="text-center"
          style={
            {
              "color": "#1C1B1B",
            }
          }
        >
          Nudge back
        </Text>
      </View>
      <Text
        className="pb-2 pt-2 text-right"
        style={
          {
            "color": "#CACACA",
            "fontSize": 11,
          }
        }
        testID="timeAgoText"
      >
        1 week ago
      </Text>
    </View>
  </View>
  <View
    className="ml-3 mr-3"
    style={
      {
        "borderBottomColor": "#737272",
        "borderBottomWidth": 1,
      }
    }
  />
</View>
`;

exports[`NudgeNotif 1`] = `
<View>
  <View
    className="flex flex-row items-center ml-3 mr-3 mt-4"
  >
    <View
      className="flex flex-col"
    >
      <View
        className="mr-2"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#CACACA",
                "fontSize": 56,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰿗
        </Text>
      </View>
    </View>
    <View
      className="flex flex-col flex-1"
    >
      <Text
        className="mr-2 mb-2"
        style={
          {
            "color": "#CACACA",
          }
        }
        testID="sender-username-with-content"
      >
        username
         
        nudged you
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#CACACA",
            "opacity": 1,
          }
        }
      >
        <Text
          className="text-center"
          style={
            {
              "color": "#1C1B1B",
            }
          }
        >
          Nudge back
        </Text>
      </View>
      <Text
        className="pb-2 pt-2 text-right"
        style={
          {
            "color": "#CACACA",
            "fontSize": 11,
          }
        }
        testID="timeAgoText"
      >
        1 week ago
      </Text>
    </View>
  </View>
  <View
    className="ml-3 mr-3"
    style={
      {
        "borderBottomColor": "#737272",
        "borderBottomWidth": 1,
      }
    }
  />
</View>
`;
